# Duckietown_ROS2_RL

./: README.md
src/cps/dt-core-cps/line_detector/: package.xml
src/cps/dt-core-cps/rl_control/: package.xml  setup.cfg  setup.py
src/cps/dt-core-cps/rl_control/config/: parameters.yaml
src/cps/dt-core-cps/rl_control/launch/: rl_control_node.launch.xml
src/cps/dt-core-cps/rl_control/rl_control/: ACNet.py  ACNet_ROS.py  ACNet_continuous.py  ACNet_discrete.py  Parameters.py  policy_params.yml  rl_control_node.py
src/cps/dt-core-cps/rl_control/rl_control/model/: quantized_model.pt
src/cps/dt-duckiebot-interface-cps/camera_driver/camera_driver/: jetson_nano_camera_node.py  jetson_nano_camera_node.py.save
src/cps/dt-duckiebot-interface-cps/wheels_driver/wheels_driver/: dagu_wheels_driver.py  wheels_driver_node.py
src/cps/dt-interfaces-cps/dt_rl_interfaces_cps/: CMakeLists.txt  package.xml
src/cps/dt-interfaces-cps/dt_rl_interfaces_cps/msg/: ActionFloat32Array2.msg
src/demonstrations/dt-demos-cps/dt_demos/: package.xml
src/demonstrations/dt-demos-cps/dt_demos/launch/: generic_lane_following.launch.xml  rl_lane_following.launch.xml  rl_lane_following_a.launch.xml  rl_lane_following_b.launch.xml
src/demonstrations/dt-demos-cps/dt_demos/launch/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/demonstrations/dt-demos-cps/dt_demos/launch/log/: latest_build
src/dt_rl_interfaces_cps/: CMakeLists.txt  package.xml
src/dt_rl_interfaces_cps/msg/: ActionFloat32.msg  ActionFloat32Array2.msg
