<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rl_control</name>
  <version>0.0.0</version>
  <description>This is the RL control package. Input image, output action.</description>
  <maintainer email="1362509665@qq.com">xinwei</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  
  <exec_depend>dt_interfaces_cps</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
